ajuste de hover nos circulos de cores

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 Personalização
               </legend>
               <label>Cor principal</label>
-              <div id="colors-container">
+              <section id="colors-container">
                 <div class="border-cicle">
                   <input type="radio" name="color" value="blue" id="blue">
                   <label id="blue-cicle" class="cicle" for="blue"></label>
@@ -125,7 +125,17 @@
                   <input type="radio" name="color" value="cyan" id="cyan">
                   <label id="cyan-cicle" class="cicle" for="cyan"></label>
                 </div>
-              </div>
+              </section>
+              <section id="event-theme">
+                <label for="">Tema do evento</label>
+                <div id="event-theme-container">
+                  <div class="card-theme">
+                    <img src="styles/assets/img_theme/birthday.png" alt="Imagem para tema de aniversário">
+                    <label for="birthday">Aniversário</label>
+                    <input type="radio" nome="theme" value="birthday" id="birthday">
+                  </div>
+                </div>
+              </section>
             </fieldset>
           </div>
             <div id="info"></div>
