--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <input type="date" id="data-end" lang="pt-br" name="Data-final">
               </div>
             </div>
-            <div class="flex-gap-1rem">
+            <div id="media-resposively-grid" class="flex-gap-1rem">
               <div class="radio-wrapper  flex-1">
                 <legend>Tipo</legend>
                 <div class="flex">
