theme-event finalizado

--- a/index.html
+++ b/index.html
@@ -134,6 +134,61 @@
                     <label for="birthday">Aniversário</label>
                     <input type="radio" nome="theme" value="birthday" id="birthday">
                   </div>
+                  <div class="card-theme">
+                    <img src="styles/assets/img_theme/kids.png" alt="Imagem para tema infantil">
+                    <label for="kids">Infantil</label>
+                    <input type="radio" nome="theme" value="kids" id="kids">
+                  </div>
+                  <div class="card-theme">
+                    <img src="styles/assets/img_theme/graduation.png" alt="Imagem para tema de formatura">
+                    <label for="graduation">Aniversário</label>
+                    <input type="radio" nome="theme" value="graduation" id="graduation">
+                  </div>
+                  <div class="card-theme">
+                    <img src="styles/assets/img_theme/married.png" alt="Imagem para tema de casamento">
+                    <label for="married">Casamento</label>
+                    <input type="radio" nome="theme" value="married" id="married">
+                  </div>
+                  <div class="card-theme">
+                    <img src="styles/assets/img_theme/baby-tea.png" alt="Imagem para tema de vhá de BB">
+                    <label for="baby-tea">Chá de Bebê</label>
+                    <input type="radio" nome="theme" value="baby-tea" id="baby-tea">
+                  </div>
+                  <div class="card-theme">
+                    <img src="styles/assets/img_theme/pan-tea.png" alt="Imagem para tema de chá de panela">
+                    <label for="pan-tea">Chá de panela</label>
+                    <input type="radio" nome="theme" value="pan-tea" id="pan-tea">
+                  </div>
+                  <div class="card-theme">
+                    <img src="styles/assets/img_theme/carnaval.png" alt="Imagem para tema de carnaval">
+                    <label for="carnaval">Carnaval</label>
+                    <input type="radio" nome="theme" value="carnaval" id="carnaval">
+                  </div>
+                  <div class="card-theme">
+                    <img src="styles/assets/img_theme/easter.png" alt="Imagem para tema de pascoa">
+                    <label for="easter">Páscoa</label>
+                    <input type="radio" nome="theme" value="easter" id="easter">
+                  </div>
+                  <div class="card-theme">
+                    <img src="styles/assets/img_theme/sao-joao.png" alt="Imagem para tema de são joão">
+                    <label for="sao-joao">Aniversário</label>
+                    <input type="radio" nome="theme" value="sao-joao" id="sao-joao">
+                  </div>
+                  <div class="card-theme">
+                    <img src="styles/assets/img_theme/halloween.png" alt="Imagem para tema de halloween">
+                    <label for="helloween">Helloween</label>
+                    <input type="radio" nome="theme" value="helloween" id="helloween">
+                  </div>
+                  <div class="card-theme">
+                    <img src="styles/assets/img_theme/cristhimas.png" alt="Imagem para tema de natal">
+                    <label for="christmas">Natal</label>
+                    <input type="radio" nome="theme" value="christmas" id="christmas">
+                  </div>
+                  <div class="card-theme">
+                    <img src="styles/assets/img_theme/others.png" alt="Imagem para tema de outros">
+                    <label for="others">Outros</label>
+                    <input type="radio" nome="theme" value="others" id="others">
+                  </div>
                 </div>
               </section>
             </fieldset>
