--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <div class="flex">
                     <div id="button-transition"></div>
                     <div class="container-inperson flex-1">
-                      <input type="radio" name="tipo" value="presencial" id="in-person">
+                      <input type="radio" name="tipo" value="presencial" id="in-person" checked>
                       
                       <label for="in-person">
                         <img src="styles/assets/icons/building-2.png" alt="">
