--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 </div>
               </div>
 
-              <div class="flex-gap-1rem">
+              <div class="flex-gap-1rem responsively-email-container">
                 <div class="input-wrapper flex-1">
                   <label for="email">E-mail</label>
                   <input type="email" id="email" name="email" placeholder="exemplo@email.com">
