--- a/index.html
+++ b/index.html
@@ -212,12 +212,11 @@
                   <label for="">Estilo</label>
                   <div id="toggle-container">
                     <div id="toggle">
-                      <div id="toggle-box">
-                        <div id="toggle-button"></div>
-                        <input type="checkbox" name="tipo" id="toggle-input">
-                      </div>
+                      <input type="checkbox" id="switch" />
+                      <label for="switch"></label>
+                      <span>Escuro</span>
+                      <span>Claro</span>
                     </div>
-                    <span>Escuro</span>
                   </div>
                 </fieldset>
 
