finalizado com get method form

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <main>
         <h1>Crie seu convite</h1>
 
-        <form method="post" enctype="multipart/form-data">
+        <form method="get" enctype="multipart/form-data"  action="http://127.0.0.1:5500">
           <fieldset id="event">
             <legend class="flex">
               <img src="styles/assets/icons/calendar.png" alt="Icone de calendário">
